# internal/c1api/model_c1_api_task_v1_task_actions_service_approve_request_input.go
@@ -1,0 +1,227 @@
+/*
+ConductorOne API
+
+The ConductorOne API is a HTTP API for managing ConductorOne resources.
+
+API version: 0.1.0-alpha
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package c1api
+
+import (
+	"encoding/json"
+)
+
+// checks if the C1ApiTaskV1TaskActionsServiceApproveRequestInput type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &C1ApiTaskV1TaskActionsServiceApproveRequestInput{}
+
+// C1ApiTaskV1TaskActionsServiceApproveRequestInput The TaskActionsServiceApproveRequest message.
+type C1ApiTaskV1TaskActionsServiceApproveRequestInput struct {
+	// The comment field.
+	Comment *string `json:"comment,omitempty"`
+	ExpandMask *C1ApiTaskV1TaskExpandMask `json:"expandMask,omitempty"`
+	// The policyStepId field.
+	PolicyStepId *string `json:"policyStepId,omitempty"`
+	AdditionalProperties map[string]interface{}
+}
+
+type _C1ApiTaskV1TaskActionsServiceApproveRequestInput C1ApiTaskV1TaskActionsServiceApproveRequestInput
+
+// NewC1ApiTaskV1TaskActionsServiceApproveRequestInput instantiates a new C1ApiTaskV1TaskActionsServiceApproveRequestInput object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewC1ApiTaskV1TaskActionsServiceApproveRequestInput() *C1ApiTaskV1TaskActionsServiceApproveRequestInput {
+	this := C1ApiTaskV1TaskActionsServiceApproveRequestInput{}
+	return &this
+}
+
+// NewC1ApiTaskV1TaskActionsServiceApproveRequestInputWithDefaults instantiates a new C1ApiTaskV1TaskActionsServiceApproveRequestInput object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewC1ApiTaskV1TaskActionsServiceApproveRequestInputWithDefaults() *C1ApiTaskV1TaskActionsServiceApproveRequestInput {
+	this := C1ApiTaskV1TaskActionsServiceApproveRequestInput{}
+	return &this
+}
+
+// GetComment returns the Comment field value if set, zero value otherwise.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetComment() string {
+	if o == nil || IsNil(o.Comment) {
+		var ret string
+		return ret
+	}
+	return *o.Comment
+}
+
+// GetCommentOk returns a tuple with the Comment field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetCommentOk() (*string, bool) {
+	if o == nil || IsNil(o.Comment) {
+		return nil, false
+	}
+	return o.Comment, true
+}
+
+// HasComment returns a boolean if a field has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) HasComment() bool {
+	if o != nil && !IsNil(o.Comment) {
+		return true
+	}
+
+	return false
+}
+
+// SetComment gets a reference to the given string and assigns it to the Comment field.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) SetComment(v string) {
+	o.Comment = &v
+}
+
+// GetExpandMask returns the ExpandMask field value if set, zero value otherwise.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetExpandMask() C1ApiTaskV1TaskExpandMask {
+	if o == nil || IsNil(o.ExpandMask) {
+		var ret C1ApiTaskV1TaskExpandMask
+		return ret
+	}
+	return *o.ExpandMask
+}
+
+// GetExpandMaskOk returns a tuple with the ExpandMask field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetExpandMaskOk() (*C1ApiTaskV1TaskExpandMask, bool) {
+	if o == nil || IsNil(o.ExpandMask) {
+		return nil, false
+	}
+	return o.ExpandMask, true
+}
+
+// HasExpandMask returns a boolean if a field has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) HasExpandMask() bool {
+	if o != nil && !IsNil(o.ExpandMask) {
+		return true
+	}
+
+	return false
+}
+
+// SetExpandMask gets a reference to the given C1ApiTaskV1TaskExpandMask and assigns it to the ExpandMask field.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) SetExpandMask(v C1ApiTaskV1TaskExpandMask) {
+	o.ExpandMask = &v
+}
+
+// GetPolicyStepId returns the PolicyStepId field value if set, zero value otherwise.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetPolicyStepId() string {
+	if o == nil || IsNil(o.PolicyStepId) {
+		var ret string
+		return ret
+	}
+	return *o.PolicyStepId
+}
+
+// GetPolicyStepIdOk returns a tuple with the PolicyStepId field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) GetPolicyStepIdOk() (*string, bool) {
+	if o == nil || IsNil(o.PolicyStepId) {
+		return nil, false
+	}
+	return o.PolicyStepId, true
+}
+
+// HasPolicyStepId returns a boolean if a field has been set.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) HasPolicyStepId() bool {
+	if o != nil && !IsNil(o.PolicyStepId) {
+		return true
+	}
+
+	return false
+}
+
+// SetPolicyStepId gets a reference to the given string and assigns it to the PolicyStepId field.
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) SetPolicyStepId(v string) {
+	o.PolicyStepId = &v
+}
+
+func (o C1ApiTaskV1TaskActionsServiceApproveRequestInput) MarshalJSON() ([]byte, error) {
+	toSerialize,err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o C1ApiTaskV1TaskActionsServiceApproveRequestInput) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Comment) {
+		toSerialize["comment"] = o.Comment
+	}
+	if !IsNil(o.ExpandMask) {
+		toSerialize["expandMask"] = o.ExpandMask
+	}
+	if !IsNil(o.PolicyStepId) {
+		toSerialize["policyStepId"] = o.PolicyStepId
+	}
+
+	for key, value := range o.AdditionalProperties {
+		toSerialize[key] = value
+	}
+
+	return toSerialize, nil
+}
+
+func (o *C1ApiTaskV1TaskActionsServiceApproveRequestInput) UnmarshalJSON(bytes []byte) (err error) {
+	varC1ApiTaskV1TaskActionsServiceApproveRequestInput := _C1ApiTaskV1TaskActionsServiceApproveRequestInput{}
+
+	if err = json.Unmarshal(bytes, &varC1ApiTaskV1TaskActionsServiceApproveRequestInput); err == nil {
+		*o = C1ApiTaskV1TaskActionsServiceApproveRequestInput(varC1ApiTaskV1TaskActionsServiceApproveRequestInput)
+	}
+
+	additionalProperties := make(map[string]interface{})
+
+	if err = json.Unmarshal(bytes, &additionalProperties); err == nil {
+		delete(additionalProperties, "comment")
+		delete(additionalProperties, "expandMask")
+		delete(additionalProperties, "policyStepId")
+		o.AdditionalProperties = additionalProperties
+	}
+
+	return err
+}
+
+type NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput struct {
+	value *C1ApiTaskV1TaskActionsServiceApproveRequestInput
+	isSet bool
+}
+
+func (v NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) Get() *C1ApiTaskV1TaskActionsServiceApproveRequestInput {
+	return v.value
+}
+
+func (v *NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) Set(val *C1ApiTaskV1TaskActionsServiceApproveRequestInput) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullableC1ApiTaskV1TaskActionsServiceApproveRequestInput(val *C1ApiTaskV1TaskActionsServiceApproveRequestInput) *NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput {
+	return &NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput{value: val, isSet: true}
+}
+
+func (v NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullableC1ApiTaskV1TaskActionsServiceApproveRequestInput) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
+
+
